--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --watch app.js"
+    "start": "nodemon app.js"
   },
   "author": "Cdiesel",
   "license": "MIT",
@@ -23,6 +23,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
-    "globals": "^15.12.0"
+    "globals": "^15.12.0",
+    "nodemon": "^3.1.7"
   }
 }
