--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@types/node": "^22.9.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "express-async-handler": "^1.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^8.57.1",
