--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "express-async-handler": "^1.2.0",
+    "express-validator": "^7.2.0",
     "pg": "^8.13.1"
   },
   "devDependencies": {
